# munger

./: .env.example  .gitignore  README.md  pyproject.toml
src/munger/: __init__.py
src/munger/advisor/: __init__.py  advisor.py  llm.py
src/munger/cli/: __init__.py  ask.py  charter.py  chat.py  event.py  ingest.py  main.py  profile.py
src/munger/core/: __init__.py  config.py  models.py
src/munger/db/: __init__.py  database.py  models.py  repository.py  vector_store.py
src/munger/ingest/: __init__.py  processor.py  seed.py
src/munger/persona/: __init__.py  mental_models.py  prompts.py
